fixed shortlist property card z-index

--- a/src/Components/PropertyCard/PropertyCard.css
+++ b/src/Components/PropertyCard/PropertyCard.css
@@ -14,6 +14,7 @@
     border-radius: 24px 24px 0 0;
     filter: brightness(1.1);
     -webkit-filter: brightness(1.1);
+    z-index: -1;
 }
 
 .single-property-card button {
